samples/var2.kija
def main(args):
  a = 3
  a = "foo"   // error
  

